// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverDropdownTest render 1`] = `
<DocumentFragment>
  <div>
    <mock-menu />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render ContextualMenu 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      arialabel="start over menu"
      componentref="[object Object]"
      iconprops="[object Object]"
      menuiconprops="[object Object]"
      text="Start over"
    />
    <mock-styledcontextualmenubase
      directionalhint="7"
      items="[object Object],[object Object]"
      target="test event"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render with dropdown on left 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      arialabel="start over menu"
      componentref="[object Object]"
      iconprops="[object Object]"
      menuiconprops="[object Object]"
      text="Start over"
    />
    <mock-styledcontextualmenubase
      directionalhint="8"
      items="[object Object],[object Object]"
      target="test target"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render: InsightsCommandButton props 1`] = `undefined`;

exports[`StartOverDropdownTest render: StyledContextualMenuBase props 1`] = `undefined`;
